Refactor form layout and improve responsive design for better usability

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <input type="text" name="pages" id="pages" required placeholder="Enter total pages">
         
                 <div class="status">
-                    <label>Status : </label>
+                    <label>Status</label>
                     <div class="option">
                         <input type="radio" name="status" id="read" value="true" required>
                         <label for="read">Read</label>
